@@ -1,10 +1,10 @@
 package leetcode._46;
 
-import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 public class Solution {
-    private List<List<Integer>> result = new ArrayList<>();
+    private List<List<Integer>> result = new LinkedList<>();
     private boolean[] visited;
 
     public List<List<Integer>> permute(int[] nums) {
@@ -12,13 +12,13 @@ public class Solution {
             return result;
         }
         visited = new boolean[nums.length];
-        permute(nums, 0, new ArrayList<>());
+        permute(nums, 0, new LinkedList<>());
         return result;
     }
 
-    private void permute(int[] nums, int index, List<Integer> p) {
+    private void permute(int[] nums, int index, LinkedList<Integer> p) {
         if (index == nums.length) {
-            result.add(new ArrayList<>(p));
+            result.add(new LinkedList<>(p));
             return;
         }
         for (int i = 0; i < nums.length; i++) {
@@ -26,7 +26,7 @@ public class Solution {
                 p.add(nums[i]);
                 visited[i] = true;
                 permute(nums, index + 1, p);
-                p.remove(p.size() - 1);
+                p.removeLast();
                 visited[i] = false;
             }
         }
