@@ -1,11 +1,11 @@
 package leetcode._47;
 
-import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.LinkedList;
 import java.util.List;
 
 public class Solution {
-    private List<List<Integer>> result = new ArrayList<>();
+    private List<List<Integer>> result = new LinkedList<>();
     private boolean[] visited;
 
     public List<List<Integer>> permuteUnique(int[] nums) {
@@ -14,13 +14,13 @@ public class Solution {
         }
         Arrays.sort(nums);
         visited = new boolean[nums.length];
-        permuteUnique(nums, 0, new ArrayList<>());
+        permuteUnique(nums, 0, new LinkedList<>());
         return result;
     }
 
-    private void permuteUnique(int[] nums, int index, List<Integer> p) {
+    private void permuteUnique(int[] nums, int index, LinkedList<Integer> p) {
         if (index == nums.length) {
-            result.add(new ArrayList<>(p));
+            result.add(new LinkedList<>(p));
             return;
         }
         for (int i = 0; i < nums.length; i++) {
@@ -30,7 +30,7 @@ public class Solution {
             visited[i] = true;
             p.add(nums[i]);
             permuteUnique(nums, index + 1, p);
-            p.remove(p.size() - 1);
+            p.removeLast();
             visited[i] = false;
         }
     }
